# __noname1

./: .editorconfig  .gitignore  README.md  create_db.bat  dev-client-multi.ps1  dev-infra.ps1  dev-protobuf.ps1  dev-server-clear-llama.ps1  dev-server-clear.ps1  dev-server-debug.ps1  dev-server-llama.ps1  dev-server.ps1  dev.ps1  docker-compose-llama.yml  docker-compose.debug.yml  docker-compose.infra.yml  docker-compose.yml  package-lock.json  probs_llama_server.ps1
.protos/: index.proto  signaling.proto
.protos/auth/: acl.proto  auth.proto  project.proto  user.proto
.protos/index/: index.proto
.protos/signaling/: signaling.proto
.test/: test_api_auth.ps1  test_api_index.ps1  test_api_signaling.ps1  test_api_signaling_ws_client.js  test_doc.json
ai-service/: README.md
client/: index.html  package-lock.json  package.json  tsc_output.txt  tsconfig.json  vite.config.ts
client-ai-service/: README.md
client/scripts/: download-models.js
client/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
client/src-tauri/: .gitignore  Cargo.toml  build.rs  check_log.txt  check_output.txt  check_output_final.txt  check_output_final_utf8.txt  check_output_utf8.txt  tauri.conf.json  tauri.conf.md
client/src-tauri/capabilities/: default.json  default.md
client/src-tauri/src/: ai_system.rs  config.rs  crypto.rs  database.rs  lib.rs  main.rs  sidecar.rs  text_processor.rs
client/src-tauri/src/commands/: ai.rs  alarm.rs  auth.rs  chat.rs  confluence.rs  content.rs  documents.rs  google_drive.rs  import.rs  media.rs  mod.rs  rag.rs
client/src-tauri/src/database/: alarm.rs  auth.rs  chat.rs  content.rs  documents.rs  mod.rs  rag.rs  schema.rs  state.rs
client/src-tauri/src/import/: hwp.rs  mod.rs  msoffice.rs
client/src/components/: ConfirmProvider.tsx  DocumentSidebar.tsx  Editor.tsx  StatusBar.tsx  Toast.tsx
client/src/components/auth/: AuthChangePasswordForm.tsx  AuthLoginForm.tsx  AuthPasswordStrengthMeter.tsx  AuthTenantSelector.tsx  ChangePasswordForm.tsx  LoginForm.tsx  PasswordStrengthMeter.tsx  TenantSelector.tsx
client/src/components/calendar/: CalendarDateTimePicker.tsx  CalendarDayView.tsx  CalendarEventDialog.tsx  CalendarMonthView.tsx  CalendarPanel.tsx  CalendarSmallCalendar.tsx  CalendarView.tsx  CalendarWeekView.tsx
client/src/components/common/: ConfirmProvider.tsx  ContentContainer.tsx  StatusBar.tsx  ThinkingAccordion.tsx  Toast.tsx
client/src/components/dialogs/: CalendarDialog.tsx  CalendarEventDialog.tsx  ConfirmDialog.tsx  GroupInfoDialog.tsx  GroupLinkDialog.tsx  NewDocumentDialog.tsx  SearchDialog.tsx  SettingsDialog.tsx
client/src/components/documentlist/: DocumentList.tsx  DocumentListGroup.tsx  DocumentListItem.tsx  DocumentListRecycleBin.tsx  types.ts
client/src/components/editor/: Breadcrumbs.tsx  Editor.tsx  EditorActions.tsx  EditorBreadcrumbs.tsx  EditorContainer.tsx  EditorContextMenu.tsx  EditorTOC.tsx  EditorTabs.tsx  EditorToolbar.tsx  SearchWidget.tsx  SingleTabEditor.tsx
client/src/components/layout/: ResizeHandle.tsx  TabMenu.tsx  WindowControls.tsx
client/src/components/metadata/: MetadataCollapsibleSection.tsx  MetadataDocumentStateDropdown.tsx  MetadataFootnoteList.tsx  MetadataLinkList.tsx  (+6 more)
client/src/services/: SignalingService.ts
client/src/stores/: alarmStore.ts  authStore.ts  chatStore.ts  contentStore.ts  documentStore.ts  messagingStore.ts  ragStore.ts
client/src/utils/: LangGraphSearch.ts  aiService.ts  aiWorker.ts  async-hooks-polyfill.ts  colorUtils.ts  formatters.ts  polyfills.ts  safeInvoke.ts  sqliteContentStorage.ts  tauri.ts
client/src/windows/: ChatWindow.tsx
protos/: auth.proto
server/: .dockerignore  .env.example  Dockerfile  Dockerfile.debug  go.mod  go.sum  main.go
server/.protos/auth/: acl.pb.go  auth.pb.go  auth.proto  auth_grpc.pb.go  department.pb.go  department.proto  document.pb.go  document.proto  position.pb.go  position.proto  project.pb.go  project.proto  tenant.pb.go  tenant.proto  user.pb.go  user.proto
server/.protos/index/: index.pb.go  index.proto  index_grpc.pb.go
server/.protos/signaling/: signaling.pb.go  signaling.proto  signaling_grpc.pb.go
server/auth/: README.md  acl.go  auth.go  department.go  document.go  email.go  jwt.go  main.go  model.go  position.go  project.go  seed.go  service.go  tenant.go  user.go
server/common/crypto/: crypto.go
server/docker/init/: 01-create-databases.sh  01-create-databases.sql
server/gateway/: README.md  main.go
server/gateway/handlers/: acl.go  auth.go  department.go  index.go  position.go  project.go  signaling.go  tenant.go  user.go
server/gateway/middleware/: auth.go  cors.go
server/index/: README.md  index.go  main.go  model.go  service.go
server/protos/auth/: auth.pb.go  auth_grpc.pb.go
server/protos/index/: index.pb.go  index_grpc.pb.go
server/protos/signaling/: signaling.pb.go  signaling_grpc.pb.go
server/signaling/: main.go  service.go
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/context/: LanguageContext.tsx
web/src/locales/: en.json  ko.json
(+80 files in other folders)
